Allow throttling in painting microbenchmark

ContentLayerDelegate::paintContents() is being used as an alternate
painting path by the rasterize and record microbenchmark. This benchmark
can crash if any frame on the page is being throttled, because this
way of painting doesn't enable throttling. This patch fixes that by
enabling throttling, which also makes the benchmark more realistic since
the real painting path also uses throttling.

BUG=600377
TEST=tools/perf/run_benchmark rasterize_and_record_micro.top_25_smooth --browser=debug --story-filter=Blogger

Review URL: https://codereview.chromium.org/1898813002

Cr-Commit-Position: refs/heads/master@{#388598}

Former-commit-id: 30585301cd73bf1e6cff2c9bf22422e515b728d8